--- a/layouts/shortcodes/disqus.html
+++ b/layouts/shortcodes/disqus.html
@@ -1,3 +1,3 @@
 {{ if and (not .Site.IsServer) .Site.DisqusShortname }}
-  {{ template "_internal/disqus.html" . }}
+  {{ template "_internal/disqus.html" .Page }}
 {{ end }}
